# Mesa-Optimizer-Detection-Framework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  benchmark_evaluation.py  benchmark_results.json  comprehensive_demo.py  enhanced_activation_analyzer.py  mkdocs.yml  pyproject.toml  real_model_testing.py  requirements.txt  setup.py  test_framework_simple.py  visualization_dashboard.py
.github/workflows/: ci.yml
docs/: index.md
examples/: basic_usage.py
scripts/: generate_adversarial.py
src/mesa_optimizer_detection/: __init__.py  cli.py  config.py
src/mesa_optimizer_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mesa_optimizer_detection/calibration/: __init__.py  calibrator.py  likelihood_model.py
src/mesa_optimizer_detection/core/: detector.py  results.py
src/mesa_optimizer_detection/detection/: activation_analyzer.py  behavioral_analyzer.py  behavioral_probe.py  causal_intervention.py  dynamics_monitor.py  enhanced_activation_analyzer.py  gradient_analyzer.py  gradient_invariant_analyzer.py
src/mesa_optimizer_detection/examples/: toy_mesa_linear.py
src/mesa_optimizer_detection/theory/: __init__.py  taxonomy.py
src/mesa_optimizer_detection/utils/: datasets.py  mi.py  model_utils.py
src/mesa_optimizer_detection/visualization/: __init__.py  dashboard.py
tests/: test_activation_analyzer.py  test_behavioral_analyzer.py  test_detection.py  test_detector_consensus.py  test_gradient_analyzer.py  test_gradient_invariant_analyzer.py  test_signaling_probe.py
