[project]
name = "mesa-optimizer-detection"
version = "0.2.0"
description = "Research prototype for detecting mesa-optimisation / deceptive alignment signals in neural networks."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Mesa Detection Team", email = "contact@mesa-detection.org"}
]
license = {text = "MIT"}
keywords = ["AI-safety", "mesa-optimisation", "deceptive-alignment", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/sanowl/Mesa-Optimizer-Detection-Framework"
"Bug Tracker" = "https://github.com/sanowl/Mesa-Optimizer-Detection-Framework/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.0.292",
    "pre-commit>=3.3"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[project.entry-points."mesa_opt_analyser"]
# Example: "my_custom = my_package.analyser:CustomAnalyser" 